--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,6 +37,10 @@
         height: 500px;
         border-radius: 20px;
         box-shadow: 0px 0px 15px black;
+
+        transition: width 0.3s, height 0.3s;
+        transition-timing-function: ease;
+        
     }
 
     section#login div#imagem {
