--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -1,7 +1,44 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
-    section#login {
-        width: 90vw;
+
+    body {
+        background-image: linear-gradient(to top, #202020, #3f3f3f );
     }
+
+    section#login {
+        width: 80vw;
+    }
+
+    section#login > div#imagem {
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+
+    section#login > div#formulario {
+        float: right;
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    body {
+        background-image: linear-gradient(to top, #202020, #3f3f3f );
+    }
+
+    section#login {
+        width: 950px;
+    }
+
+    section#login > div#imagem {
+        float: left;
+        width: 50%;
+        height: 100%;
+}
+
+section#login > div#formulario {
+    float: right;
+    width: 50%;
+}
 }
