--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@
     }
 
     body, html {
-       background-color: #202020; 
+       background-image: linear-gradient(to top, #202020, #3f3f3f );
        width: 100vw;
        height: 100vh;
     }
@@ -32,13 +32,13 @@
         transform: translate(-50%, -50%);
         overflow: hidden;
 
-        background-color: white;
+        background-color: #65686b;
         width: 250px;
         height: 500px;
         border-radius: 20px;
         box-shadow: 0px 0px 15px black;
 
-        transition: width 0.3s, height 0.3s;
+        transition: width 0.2s, height 0.2s;
         transition-timing-function: ease;
         
     }
