--- a/estilos/style.css
+++ b/estilos/style.css
@@ -61,12 +61,30 @@
         display: none   ;
     }
 
+    div.campo > span {
+        font-size: 2em;
+        width: 40px;
+        padding: 5px;
+    }
+
+    div.campo > input {
+        background-color: #F28907;
+        color: black;
+        font-size: 1em;
+        width: calc(100% -80px);
+        height: 100%;
+        transform: translateY(-11px);
+        border: 1px;
+        border-radius: 5px;
+        padding: 4px;
+    }
+
     form > div.campo {
         background-color: #F28907;
         display: block;
         font-size: 1em;
         width: 100%;
-        height: 25px;
+        height: 40px;
         border-radius: 5px;
         margin: 5px 0px;
         
@@ -77,7 +95,7 @@
         display: block;
         font-size: 1em;
         width: 100%;
-        height: 25px;
+        height: 45px;
         border: none;
         margin-top: 5px;
         background-color: #F28907;
