--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,7 +34,7 @@
 
         background-color: #65686b;
         width: 300px;
-        height: 500px;
+        height: 520px;
         border-radius: 20px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.212);
         transition: width 0.2s, height 0.2s;
@@ -62,20 +62,21 @@
     }
 
     div.campo > span {
+        background-color: #F28907;
         font-size: 2em;
         width: 40px;
+        height: 40px;
         padding: 5px;
     }
 
     div.campo > input {
-        background-color: #F28907;
-        color: black;
+        background-color: white;
         font-size: 1em;
-        width: calc(100% -80px);
-        height: 100%;
-        transform: translateY(-11px);
-        border: 1px;
-        border-radius: 5px;
+        width: 233px;
+        height: 83%;
+        transform: translateY(-10px);
+        border: 0px;
+        border-radius: 8px;
         padding: 4px;
     }
 
@@ -88,17 +89,17 @@
         border-radius: 5px;
         margin: 5px 0px;
         
-
     }
 
     form > input[type=submit] {
         display: block;
         font-size: 1em;
         width: 100%;
-        height: 45px;
+        height: 40px;
         border: none;
         margin-top: 5px;
         background-color: #F28907;
+        border: none;
         border-radius: 5px;
         cursor: pointer;
     }
@@ -113,7 +114,7 @@
         text-align: center;
         font-size: 1em;
         width: 100%;
-        height: 25px;
+        height: 40px;
         margin-top: 5px;
         background-color: #F28907;
         color: black;
