--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@
     }
 
     body, html {
-       background-image: linear-gradient(to top, #202020, #3f3f3f );
+       background-image: linear-gradient(to top, #070707, #575757 );
        width: 100vw;
        height: 100vh;
     }
@@ -29,14 +29,13 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
         overflow: hidden;
-
         background-color: #65686b;
         width: 300px;
         height: 520px;
         border-radius: 20px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.212);
+        transform: translate(-50%, -50%);
         transition: width 0.2s, height 0.2s;
         transition-timing-function: ease;
     }
@@ -70,14 +69,14 @@
     }
 
     div.campo > input {
-        background-color: white;
+        background-color: #F28907;
         font-size: 1em;
         width: 233px;
         height: 83%;
-        transform: translateY(-10px);
         border: 0px;
         border-radius: 8px;
         padding: 4px;
+        transform: translateY(-10px);
     }
 
     form > div.campo {
@@ -114,7 +113,7 @@
         text-align: center;
         font-size: 1em;
         width: 100%;
-        height: 40px;
+        height: 25px;
         margin-top: 5px;
         background-color: #F28907;
         color: black;
